添加两个新交易类型（但是不会弄动态交易表